--- a/lista1/lista1.ipynb
+++ b/lista1/lista1.ipynb
@@ -1315,7 +1315,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solução do problem 6: Insira sua solução na célula abaixo!"
+    "### Solução do Problema 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Função Objetivo:\n",
+    "Minimizar o custo total de distribuição:\n",
+    "\n",
+    "$$\n",
+    "Z = 4.5x_{FD_1} + 4x_{FD_2} + 7x_{FD_3} + 12x_{FC_1} + 10x_{FC_2} + 15x_{FC_3} + 18x_{FC_4}\n",
+    "$$\n",
+    "$$\n",
+    "+ 10x_{D1C_1} + 5x_{D1C_2} + 10x_{D1C_3} + 12x_{D1C_4} + 7x_{D2C_1} + 5x_{D2C_2} + 8x_{D2C_3} + 12x_{D2C_4}\n",
+    "$$\n",
+    "$$\n",
+    "+ 7x_{D3C_1} + 8x_{D3C_2} + 5x_{D3C_3} + 10x_{D3C_4}\n",
+    "$$\n",
+    "\n",
+    "#### Restrições:\n",
+    "\n",
+    "1. **Capacidade da Fábrica**:\n",
+    "$$\n",
+    "x_{FD_1} + x_{FD_2} + x_{FD_3} + x_{FC_1} + x_{FC_2} + x_{FC_3} + x_{FC_4} \\leq 250\n",
+    "$$\n",
+    "\n",
+    "2. **Capacidades dos Depósitos**:\n",
+    "- Para \\( D_1 \\):\n",
+    "  $$\n",
+    "  x_{FD_1} \\leq 80\n",
+    "  $$\n",
+    "- Para \\( D_2 \\):\n",
+    "  $$\n",
+    "  x_{FD_2} \\leq 40\n",
+    "  $$\n",
+    "- Para \\( D_3 \\):\n",
+    "  $$\n",
+    "  x_{FD_3} \\leq 74\n",
+    "  $$\n",
+    "\n",
+    "3. **Demandas dos Consumidores**:\n",
+    "- Para \\( C_1 \\):\n",
+    "  $$\n",
+    "  x_{FC_1} + x_{D1C_1} + x_{D2C_1} + x_{D3C_1} = 50\n",
+    "  $$\n",
+    "- Para \\( C_2 \\):\n",
+    "  $$\n",
+    "  x_{FC_2} + x_{D1C_2} + x_{D2C_2} + x_{D3C_2} = 70\n",
+    "  $$\n",
+    "- Para \\( C_3 \\):\n",
+    "  $$\n",
+    "  x_{FC_3} + x_{D1C_3} + x_{D2C_3} + x_{D3C_3} = 45\n",
+    "  $$\n",
+    "- Para \\( C_4 \\):\n",
+    "  $$\n",
+    "  x_{FC_4} + x_{D1C_4} + x_{D2C_4} + x_{D3C_4} = 30\n",
+    "  $$\n",
+    "\n",
+    "4. **Equilíbrio de Fluxo nos Depósitos**:\n",
+    "- Para \\( D_1 \\):\n",
+    "  $$\n",
+    "  x_{FD_1} = x_{D1C_1} + x_{D1C_2} + x_{D1C_3} + x_{D1C_4}\n",
+    "  $$\n",
+    "- Para \\( D_2 \\):\n",
+    "  $$\n",
+    "  x_{FD_2} = x_{D2C_1} + x_{D2C_2} + x_{D2C_3} + x_{D2C_4}\n",
+    "  $$\n",
+    "- Para \\( D_3 \\):\n",
+    "  $$\n",
+    "  x_{FD_3} = x_{D3C_1} + x_{D3C_2} + x_{D3C_3} + x_{D3C_4}\n",
+    "  $$\n",
+    "\n",
+    "5. **Não negatividade**:\n",
+    "$$\n",
+    "x_{FD_1}, x_{FD_2}, x_{FD_3}, x_{FC_1}, x_{FC_2}, x_{FC_3}, x_{FC_4}, x_{D1C_1}, x_{D1C_2}, x_{D1C_3}, x_{D1C_4}, x_{D2C_1}, x_{D2C_2}, x_{D2C_3}, x_{D2C_4}, x_{D3C_1}, x_{D3C_2}, x_{D3C_3}, x_{D3C_4} \\geq 0\n",
+    "$$\n"
    ]
   },
   {
@@ -1323,7 +1399,9 @@
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m = Model(GLPK.Optimizer)\n"
+   ]
   },
   {
    "cell_type": "markdown",
