--- a/lista1/lista1.ipynb
+++ b/lista1/lista1.ipynb
@@ -2016,15 +2016,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solução do problem 10: Insira sua solução na célula abaixo!"
+    "### Solução do Problema 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esquema de produção ótimo:\n",
+      "Fertilizante S: 150.0 toneladas\n",
+      "Fertilizante Q: 0.0 toneladas\n",
+      "Fertilizante N: 400.0 toneladas\n",
+      "Lucro total: R$ 111250.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "modelo = Model(GLPK.Optimizer)\n",
+    "\n",
+    "@variable(modelo, x_S >= 0)\n",
+    "@variable(modelo, x_Q >= 0)\n",
+    "@variable(modelo, x_N >= 0)\n",
+    "\n",
+    "@objective(modelo, Max, 275 * x_S + 210 * x_Q + 175 * x_N)\n",
+    "\n",
+    "@constraint(modelo, 3 * x_S + 2.5 * x_Q + 2 * x_N <= 1250)\n",
+    "@constraint(modelo, 4 * x_S + 2 * x_Q + x_N <= 1000)\n",
+    "\n",
+    "optimize!(modelo)\n",
+    "\n",
+    "lucro_total = objective_value(modelo)\n",
+    "quantidades = value.(x_S), value.(x_Q), value.(x_N)\n",
+    "\n",
+    "println(\"Esquema de produção ótimo:\")\n",
+    "println(\"Fertilizante S: \", quantidades[1], \" toneladas\")\n",
+    "println(\"Fertilizante Q: \", quantidades[2], \" toneladas\")\n",
+    "println(\"Fertilizante N: \", quantidades[3], \" toneladas\")\n",
+    "println(\"Lucro total: R\\$ \", lucro_total)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O esquema de produção para maximizar o lucro seria o seguinte: Fertilizante S = 150 toneladas, Fertilizante Q = 0 toneladas e Fertilizante N = 400 toneladas, de forma a faturar 111250 reais como lucro. Aumentando a quantidade em toneladas do que há disponível temos que se a matéria prima 1 tiver mais uma tonelada o maior lucro vai ser feito com o Fertilizante N e se a matéria prima 2 quem possuir mais quantidade, o lucro fica concentrado no Fertilizante S. Aumentar o valor do preço de venda de nenhum Fertilizante altera no esquema ótimo, pois ele depende apenas das retrições, contudo, aumentar o valor do preço de venda, eles fazem mais caro"
+   ]
   }
  ],
  "metadata": {
