--- a/lista1/lista1.ipynb
+++ b/lista1/lista1.ipynb
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1630,67 +1630,56 @@
     },
     {
      "ename": "Base.Meta.ParseError",
-     "evalue": "ParseError:\n# Error @ /home/wagnerjunior/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X65sZmlsZQ==.jl:44:25\n# Exibir o custo total\nprintln(\"Custo total: R$\", objective_value(modelo))\n#                       └ ── identifier or parenthesized expression expected after $ in string",
+     "evalue": "ParseError:\n# Error @ /home/wagnerjunior/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X65sZmlsZQ==.jl:34:25\n\nprintln(\"Custo total: R$\", objective_value(modelo))\n#                       └ ── identifier or parenthesized expression expected after $ in string",
      "output_type": "error",
      "traceback": [
       "ParseError:\n",
-      "# Error @ /home/wagnerjunior/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X65sZmlsZQ==.jl:44:25\n",
-      "# Exibir o custo total\n",
+      "# Error @ /home/wagnerjunior/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X65sZmlsZQ==.jl:34:25\n",
+      "\n",
       "println(\"Custo total: R$\", objective_value(modelo))\n",
       "#                       └ ── identifier or parenthesized expression expected after $ in string\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ ~/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X65sZmlsZQ==.jl:44"
+      "   @ ~/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X65sZmlsZQ==.jl:34"
      ]
     }
    ],
    "source": [
-    "# Parâmetros do problema\n",
     "horas = 24\n",
     "demanda = [43, 40, 36, 36, 35, 38, 41, 46, 49, 48, 47, 47, 48, 46, 45, 47, 50, 63, 75, 75, 72, 66, 57, 50]\n",
     "custo_ate_50 = 100\n",
     "custo_excedente = 400\n",
     "compra_maxima = 65\n",
     "capacidade_bateria = 30\n",
-    "bateria_inicial = 0  # Inicializando a bateria vazia\n",
+    "bateria_inicial = 0\n",
     "\n",
-    "# Modelo de otimização\n",
     "modelo = Model(GLPK.Optimizer)\n",
     "\n",
-    "# Variáveis\n",
-    "@variable(modelo, 0 <= x[i=1:horas] <= compra_maxima)  # Energia comprada por hora\n",
-    "@variable(modelo, 0 <= y[i=1:horas] <= 50)  # Parte da energia barata (até 50 MWh)\n",
-    "@variable(modelo, 0 <= z[i=1:horas])  # Parte excedente da energia cara\n",
-    "@variable(modelo, 0 <= b[i=1:horas] <= demanda[i])  # Energia retirada da bateria\n",
-    "@variable(modelo, 0 <= s[i=1:horas] <= capacidade_bateria)  # Nível da bateria\n",
+    "@variable(modelo, 0 <= x[i=1:horas] <= compra_maxima)\n",
+    "@variable(modelo, 0 <= y[i=1:horas] <= 50)\n",
+    "@variable(modelo, 0 <= z[i=1:horas])\n",
+    "@variable(modelo, 0 <= b[i=1:horas] <= demanda[i])\n",
+    "@variable(modelo, 0 <= s[i=1:horas] <= capacidade_bateria)\n",
     "\n",
-    "# Função objetivo: minimizar o custo total de energia comprada\n",
     "@objective(modelo, Min, sum(custo_ate_50 * y[i] + custo_excedente * z[i] for i in 1:horas))\n",
     "\n",
-    "# Restrições\n",
-    "@constraint(modelo, [i=1:horas], x[i] == y[i] + z[i])  # Relação entre energia barata e cara\n",
-    "@constraint(modelo, [i=1:horas], x[i] + b[i] >= demanda[i])  # Atender à demanda\n",
+    "@constraint(modelo, [i=1:horas], x[i] == y[i] + z[i])\n",
+    "@constraint(modelo, [i=1:horas], x[i] + b[i] >= demanda[i])\n",
     "\n",
-    "# Restrição para a primeira hora: bateria começa vazia, atender demanda com compra direta\n",
     "@constraint(modelo, s[1] == 0)\n",
-    "@constraint(modelo, b[1] == 0)  # Não pode usar a bateria na primeira hora\n",
+    "@constraint(modelo, b[1] == 0)\n",
     "\n",
-    "# Restrição para as horas seguintes: bateria evolui e ajuda a atender a demanda\n",
     "@constraint(modelo, [i=2:horas], s[i] == s[i-1] + (x[i] - b[i]))\n",
-    "@constraint(modelo, [i=1:horas], b[i] <= s[i])  # O uso da bateria não pode exceder o que está armazenado\n",
+    "@constraint(modelo, [i=1:horas], b[i] <= s[i])\n",
     "\n",
-    "# Resolução do modelo\n",
     "optimize!(modelo)\n",
     "\n",
-    "# Exibir resultados\n",
     "for i in 1:horas\n",
     "    println(\"Hora $i: Compra = \", value(x[i]), \" MWh, Parte barata = \", value(y[i]), \" MWh, Parte cara = \", value(z[i]), \" MWh, Uso da bateria = \", value(b[i]), \" MWh, Nível da bateria = \", value(s[i]), \" MWh\")\n",
     "end\n",
     "\n",
-    "# Exibir o custo total\n",
-    "println(\"Custo total: R$\", objective_value(modelo))\n",
-    "\n"
+    "println(\"Custo total: R$\", objective_value(modelo))"
    ]
   },
   {
