--- a/lista1/lista1.ipynb
+++ b/lista1/lista1.ipynb
@@ -1293,13 +1293,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1629,38 +1622,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemError",
-     "evalue": "SystemError: opening file \"doodle.png\": Arquivo ou diretório inexistente",
-     "output_type": "error",
-     "traceback": [
-      "SystemError: opening file \"doodle.png\": Arquivo ou diretório inexistente\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] systemerror(p::String, errno::Int32; extrainfo::Nothing)\n",
-      "   @ Base ./error.jl:176\n",
-      " [2] systemerror\n",
-      "   @ ./error.jl:175 [inlined]\n",
-      " [3] open(fname::String; lock::Bool, read::Nothing, write::Nothing, create::Nothing, truncate::Nothing, append::Nothing)\n",
-      "   @ Base ./iostream.jl:293\n",
-      " [4] open\n",
-      "   @ ./iostream.jl:275 [inlined]\n",
-      " [5] open(f::Base.var\"#431#432\"{Tuple{}}, args::String; kwargs::@Kwargs{})\n",
-      "   @ Base ./io.jl:394\n",
-      " [6] open\n",
-      "   @ ./io.jl:393 [inlined]\n",
-      " [7] read(::String)\n",
-      "   @ Base ./io.jl:484\n",
-      " [8] top-level scope\n",
-      "   @ ~/intro_otimizacao/lista1/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X60sZmlsZQ==.jl:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "display(\"image/png\", read(\"doodle.png\"))\n",
+    "#display(\"image/png\", read(\"doodle.png\"))\n",
     "#![image.png](attachment:image.png)"
    ]
   },
@@ -1668,15 +1634,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solução do problem 7: Insira sua solução na célula abaixo!"
+    "### Solução do Problema 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não existe um agendamento viável.\n"
+     ]
+    }
+   ],
+   "source": [
+    "disponibilidade = [\n",
+    "    0 0 1 1 0 0 0 1 1 0 0 0 0;\n",
+    "    0 1 1 0 0 0 0 0 1 1 0 0 0;\n",
+    "    0 0 0 1 1 0 1 1 0 1 1 1 1;\n",
+    "    0 0 0 1 1 1 1 1 1 1 1 1 0;\n",
+    "    0 0 0 0 0 0 1 1 1 0 0 0 0;\n",
+    "    0 1 1 0 0 0 0 0 1 1 0 0 0;\n",
+    "    0 0 0 1 1 1 1 0 0 0 0 0 0;\n",
+    "    1 1 0 0 0 0 0 0 0 0 1 1 1;\n",
+    "    1 1 1 0 0 0 0 0 0 1 1 0 0;\n",
+    "    0 0 0 0 0 0 0 1 1 0 0 0 0;\n",
+    "    0 0 0 0 0 0 1 1 1 0 0 0 0;\n",
+    "    1 1 0 0 0 1 1 1 1 0 0 1 1;\n",
+    "    1 1 1 0 1 1 0 0 0 0 0 1 1;\n",
+    "    0 1 1 1 0 0 0 0 0 0 0 0 0;\n",
+    "    1 1 0 0 1 1 0 0 0 0 0 0 0\n",
+    "]\n",
+    "\n",
+    "modelo = Model(GLPK.Optimizer)\n",
+    "\n",
+    "@variable(modelo, x[1:15, 1:13], Bin)\n",
+    "\n",
+    "@objective(modelo, Max, sum(x[i,j] for i in 1:15, j in 1:13))\n",
+    "\n",
+    "for i in 1:15\n",
+    "    @constraint(modelo, sum(x[i,j] for j in 1:13) == 1)\n",
+    "end\n",
+    "\n",
+    "for j in 1:13\n",
+    "    @constraint(modelo, sum(x[i,j] for i in 1:15) <= 1)\n",
+    "end\n",
+    "\n",
+    "for i in 1:15\n",
+    "    for j in 1:13\n",
+    "        @constraint(modelo, x[i,j] <= disponibilidade[i,j])\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "optimize!(modelo)\n",
+    "\n",
+    "if termination_status(modelo) == MOI.OPTIMAL\n",
+    "    println(\"Agendamento viável encontrado:\")\n",
+    "    for i in 1:15\n",
+    "        for j in 1:13\n",
+    "            if value(x[i,j]) == 1\n",
+    "                println(\"Pesquisador $(i) encontra-se no intervalo $(j).\")\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "else\n",
+    "    println(\"Não existe um agendamento viável.\")\n",
+    "end"
+   ]
   },
   {
    "cell_type": "markdown",
