--- a/grupo2/trabalho2_fakenews.ipynb
+++ b/grupo2/trabalho2_fakenews.ipynb
@@ -15,11 +15,13 @@
     "### Índice\n",
     "\n",
     "1. [Introdução](#1.-Introdução)\n",
-    "1. [Modelo Matemático](#2.-Modelo-Matemático)\n",
-    "1. [Solução](#3.-Solução)\n",
-    "1. [Resultados e Discussão](#4.-Resultados-e-discussão)\n",
-    "  1. [Subseção Opcional](#4.A.-Acrescente-subseções-se-necessário)\n",
-    "1. [Conclusão](#5.-Conclusão)"
+    "1. [Modelo ISR](#2.-Modelo-ISR)\n",
+    "1. [Função Objetivo](#3.A.-Função-Objetivo)\n",
+    "1. [Controle Ótimo](#4.-Controle-Ótimo)\n",
+    "1. [Restrições Orçamentárias](#5.-Restrições-Orçamentárias)\n",
+    "1. [Controle em Tempo Real](#6.-Controle-Em-Tempo-Real)\n",
+    "1. [Incertezas](#7-Incertezas)\n",
+    "1. [Conclusão](#8.-Conclusão)"
    ]
   },
   {
@@ -30,16 +32,107 @@
    "source": [
     "## 1. Introdução ##\n",
     "\n",
-    "As primeiras frases devem dar um panorama geral do projeto. Em seguida, uma descrição mais detalhada do problema que será resolvido, uma breve história do surgimento do problema (com [citations](https://en.wikipedia.org/wiki/Citation)) que será abordado, porque é importante e interessante e quaisquer outros fatos correlatos que queira expor. A fonte dos dados utilizados deve ser explicitada (pesquisa? internet? gerados sinteticamente?). Também deve ser feito um esboço do restante do relatório.\n",
+    "O trabalho tem por objetivo realizar o controle ótimo de um problema de epidemiologia social, que são as fake news. Atualmente com o avanço da tecnologia, as fake news se tornaram um problema cada vez mais grave principalmente para pessoas mais leigas com relação aos perigos que a internet pode proporcionar, sendo alvos fáceis. A partir disso, foi fornecido um modelo discreto do problema onde será feita a otimização:\n",
     "\n",
+    "$$ x_1(k + 1) = x_1(k) - \\beta x_1(k)x_2(k) - bu(k)x_1(k) $$\n",
+    "$$ x_2(k + 1) = x_2(k) + \\beta x_1(k)x_2(k) - \\gamma x_2(k)^2 $$\n",
     "\n",
-    "Esta seção deve ter entre 300 e 600 palavras, e **deve ser acessível a leigos** (não deve ser suposto que o leitor desta seção cursou esta disciplina (COM361)). Podem incluir figuras se acharem convenientes:\n",
+    "$x_1(k)$ representa os ignorantes/indecisos \n",
     "\n",
-    "![fixit flowchart][flow]\n",
+    "$x_2(k)$ representa os espalhadores de fake news \n",
     "\n",
-    "Para mais ajuda no uso de Markdown, veja [este link](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet).\n",
+    "$u(k)$ representa o nosso controle, que pode ser visto como \"vacinas\" de educação \n",
     "\n",
-    "[flow]: https://s-media-cache-ak0.pinimg.com/736x/f5/75/c5/f575c53b93724808c6f0211890a54900.jpg"
+    "A partir dessas informações e através do modelo ISR, será proposta uma função objetivo que se adeque ao sistema e feito o controle ótimo e um controle em tempo real."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Modelo ISR ##\n",
+    "\n",
+    "O modelo ISR (Ignorant - Spreader - Recovered) para propagação de fake news se baseia em algumas premissas para seu funcionamento, que são as seguintes:\n",
+    "\n",
+    "I + S = 2S (Um propagador consegue converter um ignorante a outro propagador)\n",
+    "\n",
+    "S + S = S + R (Dois propagadores ao se encontrarem, um deles percebe que a informação já é bem conhecida e \"desanima\" de espalhar)\n",
+    "\n",
+    "S + R = 2R (Um recuperado consegue converter um propagador)\n",
+    "\n",
+    "As taxas de conversão são justamente as constantes estabelecidas no modelo, $\\beta$ é a taxa de conversão de um ignorante para propagador e $\\gamma$ é a taxa de um propagador para recuperado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Função Objetivo ##\n",
+    "\n",
+    "Para a escolha da função objetivo foi feito uma análise da discussão da página 223 onde é introduzido o conceito de reprodução básica, que diz que o número mínimo que a informação vai continuar se espalhando é de $R_0$ = $\\dfrac{\\gamma}{\\beta}$, e a partir disso sabemos que a taxa de aumento nos propagadores precisa ser menor que esse valor, assim temos que:\n",
+    "\n",
+    "$$ x_1(k) + x_2(k) < \\dfrac{\\gamma}{\\beta} $$\n",
+    "\n",
+    "Dessa forma, tendo em vista que o objetivo central de toda a otimização é minimizar o número de propagadores, a função objetivo precisa minimizar tanto o custo de controle (de forma a evitar esforços desnecessários) e minimizar a diferença $x_1(k) + x_2(k) - \\dfrac{\\gamma}{\\beta}$ para garantir que o valor encontrado seja de fato ótimo.\n",
+    "\n",
+    "Assim, basta que integremos no horizonte a seguinte função: \n",
+    "\n",
+    "$$\n",
+    "J = \\int_{0}^{T_f} \\left[ R \\cdot u(t)^2 + Q \\cdot \\left( x_1(t) + x_2(t) - \\frac{\\gamma}{\\beta} \\right)^2 \\right] dt,\n",
+    "$$\n",
+    "onde:\n",
+    "- \\(R\\): penaliza o esforço de controle $u(t)$.\n",
+    "- \\(Q\\): penaliza o desvio do estado $(x_1(t) + x_2(t)$ em relação ao objetivo $\\frac{\\gamma}{\\beta}$.\n",
+    "- $u(t)$: controle.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Controle Ótimo ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Restrições Orçamentárias ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Controle em Tempo Real ##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Incertezas ##"
    ]
   },
   {
