--- a/grupo2/trabalho2_fakenews.ipynb
+++ b/grupo2/trabalho2_fakenews.ipynb
@@ -98,13 +98,85 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "using JuMP\n",
+    "using Ipopt  # Utilizamos Ipopt como o resolvedor padrão\n",
+    "using PyPlot\n",
+    "\n",
+    "function solveISR(β, γ, b, T, x1_init, x2_init, R, Q)\n",
+    "    k = length(T)            # Número de pontos de tempo\n",
+    "    T_max = T[end]           # Tempo final\n",
+    "    xw = [γ / β; γ / β]      # Waypoint desejado para x1 + x2\n",
+    "\n",
+    "    # Configuração do modelo\n",
+    "    m = Model(Ipopt.Optimizer)  # Substituímos Gurobi/Mosek por Ipopt\n",
+    "\n",
+    "    # Variáveis de estado e controle\n",
+    "    @variable(m, x1[1:T_max] >= 0)  # Ignorantes\n",
+    "    @variable(m, x2[1:T_max] >= 0)  # Espalhadores\n",
+    "    @variable(m, u[1:T_max] >= 0)   # Controle\n",
+    "\n",
+    "    # Condições iniciais\n",
+    "    @constraint(m, x1[1] == x1_init)\n",
+    "    @constraint(m, x2[1] == x2_init)\n",
+    "\n",
+    "    # Dinâmica do modelo ISR\n",
+    "    for t in 1:T_max - 1\n",
+    "        @constraint(m, x1[t + 1] == x1[t] - β * x1[t] * x2[t] - b * u[t] * x1[t])\n",
+    "        @constraint(m, x2[t + 1] == x2[t] + β * x1[t] * x2[t] - γ * x2[t]^2)\n",
+    "    end\n",
+    "\n",
+    "    # Função objetivo: minimizar controle + penalidade de desvio + tempo\n",
+    "    @objective(m, Min, R * sum(u .^ 2) + Q * sum((x1[T] .+ x2[T] .- xw[1]) .^ 2))\n",
+    "\n",
+    "    # Resolver o modelo\n",
+    "    optimize!(m)\n",
+    "\n",
+    "    # Extrair resultados\n",
+    "    x1_opt = value.(x1)\n",
+    "    x2_opt = value.(x2)\n",
+    "    u_opt = value.(u)\n",
+    "    J1 = R * sum(u_opt .^ 2)  # Custo associado ao controle\n",
+    "    J2 = Q * sum((x1_opt[T] .+ x2_opt[T] .- xw[1]) .^ 2)  # Penalidade de desvio\n",
+    "    return (J1, J2, x1_opt, x2_opt, u_opt)\n",
+    "end\n",
+    "\n",
+    "# Parâmetros do problema ISR\n",
+    "β = 0.4                  # Taxa de interação\n",
+    "γ = 0.1                  # Taxa de recuperação\n",
+    "b = 0.05                 # Taxa de controle\n",
+    "T = [1, 20, 50, 60, 80, 100, 120]      # Pontos de tempo de interesse\n",
+    "x1_init = 1.0            # Estado inicial de ignorantes\n",
+    "x2_init = 0.5            # Estado inicial de espalhadores\n",
+    "R = 0.001                  # Penalidade de controle\n",
+    "Q = 1.0                  # Penalidade de desvio\n",
+    "\n",
+    "# Resolver o problema ISR\n",
+    "(J1, J2, x1_opt, x2_opt, u_opt) = solveISR(β, γ, b, T, x1_init, x2_init, R, Q)\n",
+    "\n",
+    "# Plotar resultados\n",
+    "figure(figsize=(12, 4))\n",
+    "plot(1:length(x1_opt), x1_opt, \"b-\", label=\"Ignorantes (x1)\")\n",
+    "plot(1:length(x2_opt), x2_opt, \"r-\", label=\"Espalhadores (x2)\")\n",
+    "plot(1:length(u_opt), u_opt, \"g-\", label=\"Controle (u)\")\n",
+    "legend()\n",
+    "xlabel(\"Tempo\")\n",
+    "ylabel(\"Valores\")\n",
+    "title(\"Dinâmica ISR com Controle\")\n",
+    "grid(true)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Restrições Orçamentárias ##"
+    "## 5. Restrições Orçamentárias ##\n",
+    "\n",
+    "Nesse próximo script, houve uma adição de restrição orçamentária para o valor que pode ser gasto em $u(k)$ de forma que simule uma situação real onde o controle que podemos aplicar não consegue ser infinito.\n",
+    "\n",
+    "$$ u(k) \\le U_{max}$$\n",
+    "\n",
+    "Os valores de todos os parâmetros são exatamente os mesmo, porém pela saída podemos perceber que o controle agora tem um pico menor de altura ao ser impactado pela restrição"
    ]
   },
   {
@@ -112,7 +184,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "using JuMP\n",
+    "using Ipopt  # Utilizamos Ipopt como o resolvedor padrão\n",
+    "using PyPlot\n",
+    "\n",
+    "function solveISR(β, γ, b, T, x1_init, x2_init, λ, R, Q, U_max)\n",
+    "    k = length(T)            # Número de pontos de tempo\n",
+    "    T_max = T[end]           # Tempo final\n",
+    "    xw = [γ / β; γ / β]      # Waypoint desejado para x1 + x2\n",
+    "\n",
+    "    # Configuração do modelo\n",
+    "    m = Model(Ipopt.Optimizer)  # Substituímos Gurobi/Mosek por Ipopt\n",
+    "\n",
+    "    # Variáveis de estado e controle\n",
+    "    @variable(m, x1[1:T_max] >= 0)  # Ignorantes\n",
+    "    @variable(m, x2[1:T_max] >= 0)  # Espalhadores\n",
+    "    @variable(m, u[1:T_max] >= 0)   # Controle\n",
+    "\n",
+    "    # Condições iniciais\n",
+    "    @constraint(m, x1[1] == x1_init)\n",
+    "    @constraint(m, x2[1] == x2_init)\n",
+    "\n",
+    "    # Dinâmica do modelo ISR\n",
+    "    for t in 1:T_max - 1\n",
+    "        @constraint(m, x1[t + 1] == x1[t] - β * x1[t] * x2[t] - b * u[t] * x1[t])\n",
+    "        @constraint(m, x2[t + 1] == x2[t] + β * x1[t] * x2[t] - γ * x2[t]^2)\n",
+    "    end\n",
+    "\n",
+    "    # Restrição orçamentária para o controle u\n",
+    "    @constraint(m, sum(u) <= U_max)\n",
+    "\n",
+    "    # Função objetivo: minimizar controle + penalidade de desvio + tempo\n",
+    "    @objective(m, Min, R * sum(u .^ 2) + Q * sum((x1[T] .+ x2[T] .- xw[1]) .^ 2) + λ * T_max)\n",
+    "\n",
+    "    # Resolver o modelo\n",
+    "    optimize!(m)\n",
+    "\n",
+    "    # Extrair resultados\n",
+    "    x1_opt = value.(x1)\n",
+    "    x2_opt = value.(x2)\n",
+    "    u_opt = value.(u)\n",
+    "    J1 = R * sum(u_opt .^ 2)  # Custo associado ao controle\n",
+    "    J2 = Q * sum((x1_opt[T] .+ x2_opt[T] .- xw[1]) .^ 2)  # Penalidade de desvio\n",
+    "    return (J1, J2, x1_opt, x2_opt, u_opt)\n",
+    "end\n",
+    "\n",
+    "# Parâmetros do problema ISR\n",
+    "β = 0.4                  # Taxa de interação\n",
+    "γ = 0.1                  # Taxa de recuperação\n",
+    "b = 0.05                 # Taxa de controle\n",
+    "T = [1, 20, 50, 60]      # Pontos de tempo de interesse\n",
+    "x1_init = 1.0            # Estado inicial de ignorantes\n",
+    "x2_init = 0.5            # Estado inicial de espalhadores\n",
+    "λ = 0.01                 # Peso do tempo\n",
+    "R = 0.001                  # Penalidade de controle\n",
+    "Q = 1.0                  # Penalidade de desvio\n",
+    "U_max = 2             # Limite orçamentário para o controle\n",
+    "\n",
+    "# Resolver o problema ISR\n",
+    "(J1, J2, x1_opt, x2_opt, u_opt) = solveISR(β, γ, b, T, x1_init, x2_init, λ, R, Q, U_max)\n",
+    "\n",
+    "# Plotar resultados\n",
+    "figure(figsize=(12, 4))\n",
+    "plot(1:length(x1_opt), x1_opt, \"b-\", label=\"Ignorantes (x1)\")\n",
+    "plot(1:length(x2_opt), x2_opt, \"r-\", label=\"Espalhadores (x2)\")\n",
+    "plot(1:length(u_opt), u_opt, \"g-\", label=\"Controle (u)\")\n",
+    "legend()\n",
+    "xlabel(\"Tempo\")\n",
+    "ylabel(\"Valores\")\n",
+    "title(\"Dinâmica ISR com Controle e Restrição Orçamentária\")\n",
+    "grid(true)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,15 +413,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.11.2",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.0"
+   "version": "1.11.2"
   }
  },
  "nbformat": 4,
